added madlib routes and fixed a bug

--- a/app/views/getword/show.html.erb
+++ b/app/views/getword/show.html.erb
@@ -1,6 +1,1 @@
-<p>my program supports: verb, noun, adjective, animal, name, adverb.</p>
-<p>for an unsupported pos, return a random word</p>
-
-
-
-<h1><%= @arr[@rand] %></h1>
+<%= @arr[@rand] %>
