--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,4 +8,4 @@
 <a href="/getword?pos=verb">"/getword?pos=name"</a>...supports: verb, noun, adjective, animal, name, adverb.
 for an unsupported pos, return a random word
 <br>
-<!-- <a href="/convert?message=yuzu">"/convert?message=yuzu"</a> -->
+<a href="/madlib">"/madlib"</a>
